--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView
     android:background="@color/black"
+    android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,215 +9,260 @@
     android:layout_height="match_parent"
     tools:context=".DetailActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <RelativeLayout
+        <LinearLayout
+            android:layout_above="@id/cardChapter"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <FrameLayout
-                    android:id="@+id/frameLeft"
-                    android:layout_toLeftOf="@+id/custom"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"/>
+                    android:layout_height="wrap_content">
 
-                <com.app.appbelajarkomik.CustomBackgroundCurve
-                    android:layout_centerHorizontal="true"
-                    android:id="@+id/custom"
-                    android:rotation="180"
-                    android:layout_width="300dp"
-                    android:layout_height="200dp"/>
+                    <FrameLayout
+                        android:id="@+id/frameLeft"
+                        android:layout_toLeftOf="@+id/custom"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"/>
 
-                <FrameLayout
-                    android:id="@+id/frameRight"
-                    android:layout_toRightOf="@id/custom"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"/>
-            </RelativeLayout>
+                    <com.app.appbelajarkomik.CustomBackgroundCurve
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/custom"
+                        android:rotation="180"
+                        android:layout_width="300dp"
+                        android:layout_height="200dp"/>
+
+                    <FrameLayout
+                        android:id="@+id/frameRight"
+                        android:layout_toRightOf="@id/custom"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"/>
+                </RelativeLayout>
 
 
-            <androidx.cardview.widget.CardView
-                app:cardBackgroundColor="@color/black"
-                android:layout_gravity="center_horizontal"
-                app:cardCornerRadius="15dp"
-                android:layout_marginTop="90dp"
-                android:layout_width="130dp"
-                android:layout_height="130dp">
                 <androidx.cardview.widget.CardView
-                    android:layout_margin="5dp"
+                    app:cardBackgroundColor="@color/black"
                     android:layout_gravity="center_horizontal"
                     app:cardCornerRadius="15dp"
                     android:layout_marginTop="90dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/cover"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp">
+                    <androidx.cardview.widget.CardView
+                        android:layout_margin="5dp"
+                        android:layout_gravity="center_horizontal"
+                        app:cardCornerRadius="15dp"
+                        android:layout_marginTop="90dp"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/cover"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+                    </androidx.cardview.widget.CardView>
                 </androidx.cardview.widget.CardView>
-            </androidx.cardview.widget.CardView>
 
-        </FrameLayout>
+            </FrameLayout>
 
-        <TextView
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:maxLines="3"
-            android:ellipsize="end"
-            android:textStyle="bold"
-            android:textSize="25dp"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:gravity="center_horizontal"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <TextView
+                android:textColor="@color/white"
+                android:layout_marginTop="10dp"
+                android:maxLines="3"
+                android:ellipsize="end"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
             <LinearLayout
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:textColor="@color/white"
-                    android:layout_gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:text="8.0"
+                <LinearLayout
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:textColor="@color/white"
-                    android:layout_gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:text="Rating"
+                    <TextView
+                        android:textColor="@color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:text="8.0"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:textColor="@color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:text="Rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:textColor="@color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:text="Completed"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:textColor="@color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:text="Status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:textColor="@color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:text="80"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:textColor="@color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:text="View"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:textColor="@color/white"
-                    android:layout_gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:text="Completed"
+                <androidx.cardview.widget.CardView
+                    app:cardBackgroundColor="@color/bgBtnDetail"
+                    android:layout_margin="8dp"
+                    app:cardCornerRadius="8dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:textColor="@color/white"
-                    android:layout_gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:text="Status"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:padding="13dp"
+                        android:src="@drawable/ic_baseline_favorite_border_24"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"/>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    app:cardBackgroundColor="@color/bgBtnDetail"
+                    android:layout_margin="8dp"
+                    app:cardCornerRadius="8dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
+
+                    <com.joooonho.SelectableRoundedImageView
+                        android:src="@drawable/ic_south_korea"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"/>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    app:cardBackgroundColor="@color/bgBtnDetail"
+                    android:layout_margin="8dp"
+                    app:cardCornerRadius="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <com.joooonho.SelectableRoundedImageView
+                        android:padding="13dp"
+                        android:src="@drawable/ic_baseline_share_24"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"/>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
-            <LinearLayout
+
+
+            <TextView
+                android:layout_margin="10dp"
+                android:textColor="@color/white"
+                android:text="Genre: Action, Comedu, Survival"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+            <TextView
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:textColor="@color/white"
-                    android:layout_gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:text="80"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:textColor="@color/white"
-                    android:layout_gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:text="View"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-
+                android:textColor="@color/white"
+                android:text="Synopsis: balla blllaaa blaaa..."
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:gravity="center_horizontal"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardChapter"
+            app:cardCornerRadius="10dp"
+            app:cardUseCompatPadding="true"
+            app:cardBackgroundColor="@color/bgBtnDetail"
+            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <TextView
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:text="List Chapter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                app:cardBackgroundColor="@color/bgBtnDetail"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+    </RelativeLayout>
 
-                <com.joooonho.SelectableRoundedImageView
-                    android:padding="13dp"
-                    android:src="@drawable/ic_baseline_favorite_border_24"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"/>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                app:cardBackgroundColor="@color/bgBtnDetail"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <com.joooonho.SelectableRoundedImageView
-                    android:src="@drawable/ic_south_korea"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"/>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                app:cardBackgroundColor="@color/bgBtnDetail"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <com.joooonho.SelectableRoundedImageView
-                    android:padding="13dp"
-                    android:src="@drawable/ic_baseline_share_24"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"/>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-
-    </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
