--- a/app/src/main/res/layout/list_trend.xml
+++ b/app/src/main/res/layout/list_trend.xml
@@ -10,6 +10,7 @@
         android:layout_width="100dp"
         android:layout_height="130dp">
         <ImageView
+            android:id="@+id/gambar"
             android:scaleType="centerCrop"
             android:src="@drawable/cover"
             android:layout_width="match_parent"
@@ -17,6 +18,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/judul"
         android:ellipsize="end"
         android:maxLines="1"
         android:layout_marginTop="10dp"
@@ -26,6 +28,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:id="@+id/chapter"
         android:layout_marginTop="5dp"
         android:text="Chapter 100"
         android:layout_width="match_parent"
