--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -65,6 +65,7 @@
                         android:layout_height="match_parent">
 
                         <ImageView
+                            android:id="@+id/imageView"
                             android:scaleType="centerCrop"
                             android:src="@drawable/cover"
                             android:layout_width="match_parent"
@@ -75,6 +76,7 @@
             </FrameLayout>
 
             <TextView
+                android:id="@+id/textViewJudul"
                 android:textColor="@color/white"
                 android:layout_marginTop="10dp"
                 android:maxLines="3"
