--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,6 +118,12 @@
     </RelativeLayout>
 
 
+    <ProgressBar
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTrend"
         android:layout_width="match_parent"
