--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,8 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/linearContent"
             android:layout_above="@id/cardChapter"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -76,6 +83,7 @@
             </FrameLayout>
 
             <TextView
+                android:textAlignment="center"
                 android:id="@+id/textViewJudul"
                 android:textColor="@color/white"
                 android:layout_marginTop="10dp"
@@ -104,6 +112,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/textRating"
                         android:textColor="@color/white"
                         android:layout_gravity="center_horizontal"
                         android:textStyle="bold"
@@ -130,6 +139,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/textStatus"
                         android:textColor="@color/white"
                         android:layout_gravity="center_horizontal"
                         android:textStyle="bold"
@@ -155,6 +165,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/textViews"
                         android:textColor="@color/white"
                         android:layout_gravity="center_horizontal"
                         android:textStyle="bold"
@@ -206,6 +217,7 @@
                     android:layout_height="wrap_content">
 
                     <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/imageFlag"
                         android:src="@drawable/ic_south_korea"
                         android:layout_width="50dp"
                         android:layout_height="50dp"/>
@@ -228,6 +240,7 @@
 
 
             <TextView
+                android:id="@+id/textGenre"
                 android:layout_margin="10dp"
                 android:textColor="@color/white"
                 android:text="Genre: Action, Comedu, Survival"
@@ -236,6 +249,7 @@
 
 
             <TextView
+                android:id="@+id/textSinopsis"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/white"
@@ -246,6 +260,7 @@
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
+            android:visibility="gone"
             android:id="@+id/cardChapter"
             app:cardCornerRadius="10dp"
             app:cardUseCompatPadding="true"
