--- a/app/src/main/res/layout/list_chapter.xml
+++ b/app/src/main/res/layout/list_chapter.xml
@@ -9,6 +9,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
+        android:id="@+id/textChapter"
         android:textSize="15dp"
         android:textStyle="bold"
         android:textAlignment="center"
