--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -32,28 +32,29 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_above="@+id/textChapter"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_above="@+id/textChapter"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/textTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:id="@+id/textTitle"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
                     android:text="gfdgdgdgg gdgdh ghdhd gdgdg gdgdhhdhdhdhdhhdhdhdhdhhdhdhdhdhhhdhdhdh"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:textSize="15dp"
-                    android:textStyle="bold"
+                    android:id="@+id/txtJenis"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/textTitle"
                     android:text="@string/app_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <TextView
@@ -71,20 +72,23 @@
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-                <TextView
-                    android:gravity="center"
-                    android:drawableLeft="@drawable/ic_baseline_star_rate_24"
-                    android:text="7.5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/textRating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_baseline_star_rate_24"
+                android:gravity="center"
+                android:text="7.5" />
 
 
-                <TextView
-                    android:layout_alignParentBottom="true"
-                    android:gravity="center"
-                    android:text="15 view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/textViews"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:gravity="center"
+                android:text="15 view" />
         </RelativeLayout>
 
     </RelativeLayout>
